expected/main/core/bitdata/bitdata18.err
ERROR: "actual/main/core/bitdata/bitdata18.lc", line 1
bitdata Bar/8 = Bar [ B101 ]            -- invalid, size mismatch
                ^
Width of Bar is 5 less than expected

ERROR: Aborting after previously reported error

